# tree-sitter-midl3

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-midl3.pc.in
bindings/c/tree_sitter/: tree-sitter-midl3.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_midl3/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMIDL3Tests/: TreeSitterMIDL3Tests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
