[package]
name = "tree-sitter-midl3"
description = "midl3 grammar for tree-sitter"
version = "0.1.0"
authors = ["Kien Nguyen"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "midl3"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/kiennq/tree-sitter-midl3"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
